<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">STORM SWITCH</string>
    <string name="app_disclaimer">This software will run games for the Nintendo Switch game console. No game titles or keys are included.&lt;br /&gt;&lt;br /&gt;Before you begin, please locate your <![CDATA[<b> prod.keys </b>]]> file on your device storage.&lt;br /&gt;&lt;br /&gt;<![CDATA[<a href=\"https://yuzu-mirror.github.io/help/quickstart\">Learn more</a>]]></string>
    <string name="notice_notification_channel_name">Notices and errors</string>
    <string name="notice_notification_channel_id" translatable="false">noticesAndErrors</string>
    <string name="notice_notification_channel_description">Shows notifications when something goes wrong.</string>
    <string name="notification_permission_not_granted">Notification permission not granted!</string>
    <string name="app_notification_channel_name" translatable="false">STORM SWITCH</string>
    <string name="app_notification_channel_id" translatable="false">STORM SWITCH</string>
    <string name="app_notification_channel_description">STORM SWITCH Switch emulator notifications</string>
    <string name="app_notification_running">STORM SWITCH is Running</string>
    <string name="seconds">Seconds</string>
    <string name="copy_to_clipboard">Copy Info</string>
    <string name="view_logs">View logs</string>
    <string name="increment">Increment</string>
    <string name="decrement">Decrement</string>
    <string name="value_too_low">Value must be at least %1$d</string>
    <string name="value_too_high">Value must be at most %1$d</string>
    <string name="invalid_value">Invalid value</string>
    <string name="using_per_game_config">Using Per-Game Config</string>
    <string name="show_input_overlay">Show Input Overlay</string>
    <string name="show_input_overlay_description">Display touch controls overlay during emulation</string>
    <string name="overlay_snap_to_grid">Snap to Grid</string>
    <string name="overlay_snap_to_grid_description">Snap overlay controls to a grid when editing</string>
    <string name="overlay_grid_size">Grid Size</string>
    <string name="overlay_grid_size_description">Size of the grid cells in pixels</string>
    <string name="input_overlay_behavior">Behavior</string>
    <string name="overlay_auto_hide">Overlay Auto Hide</string>
    <string name="overlay_auto_hide_description">Automatically hide the touch controls overlay after the specified time of inactivity.</string>
    <string name="enable_input_overlay_auto_hide">Enable Overlay Auto Hide</string>
    <string name="hide_overlay_on_controller_input">Hide Overlay on Controller Input</string>
    <string name="hide_overlay_on_controller_input_description">Automatically hide the touch controls overlay when a physical controller is used. Overlay reappears when controller is disconnected.</string>
    <string name="invert_confirm_back_controller_buttons">Invert Confirm/Back Controller Buttons</string>
    <string name="invert_confirm_back_controller_buttons_description">Swap Android Confirm and Back button handling to match both Switch and Xbox styles while using the app UI.</string>
    <string name="input_overlay_options">Input Overlay</string>
    <string name="input_overlay_options_description">Configure on-screen controls</string>
    <string name="edit_overlay_layout">Edit Overlay Layout</string>
    <string name="edit_overlay_layout_description">Adjust the position and scale of on-screen controls</string>
    <string name="process_ram">Process RAM: %1$d MB</string>
    <string name="shaders_prefix">Building</string>
    <string name="shaders_suffix">Shader(s)</string>
    <string name="charging">(Charging)</string>
    <string name="system_info_label">System:</string>
    <string name="show_stats_overlay">Show Performance Stats Overlay</string>
    <string name="stats_overlay_customization">Customization</string>
    <string name="stats_overlay_items">Visibility</string>
    <string name="stats_overlay_options">Performance Overlay</string>
    <string name="enable_stats_overlay_">Enable Performance Stats Overlay</string>
    <string name="stats_overlay_options_description">Configure what information is shown in the performance stats overlay</string>
    <string name="show_fps">Show FPS</string>
    <string name="show_fps_description">Display current frames per second</string>
    <string name="show_frametime">Show Frametime</string>
    <string name="show_app_ram_usage">Show App Memory Usage</string>
    <string name="show_app_ram_usage_description">Display the amount of RAM the emulator is using</string>
    <string name="show_system_ram_usage">Show System Memory Usage</string>
    <string name="show_system_ram_usage_description">Display the amount of RAM used by the system</string>
    <string name="show_bat_temperature">Show Battery Temperature</string>
    <string name="bat_temperature_unit">Battery Temperature Units</string>
    <string name="show_power_info">Show Battery Info</string>
    <string name="show_power_info_description">Display current power draw and remaining capacity on battery</string>
    <string name="show_shaders_building">Show Shaders Building</string>
    <string name="show_shaders_building_description">Display current number of shaders being built</string>
    <string name="pipeline_worker_cores">Pipeline Worker Threads</string>
    <string name="pipeline_worker_cores_description">Manage the amount of cores used for building Vulkan pipelines, the higher value will improve pipeline compilation performance but temperatures will increase as well.</string>
    <string name="overlay_position">Overlay Position</string>
    <string name="overlay_position_description">Choose where the overlay is displayed on the screen</string>
    <string name="overlay_position_top_left">Top Left</string>
    <string name="overlay_position_top_right">Top Right</string>
    <string name="overlay_position_bottom_left">Bottom Left</string>
    <string name="overlay_position_bottom_right">Bottom Right</string>
    <string name="overlay_position_center_top">Center Top</string>
    <string name="overlay_position_center_bottom">Center Bottom</string>
    <string name="perf_overlay_background">Overlay Background</string>
    <string name="perf_overlay_background_description">Adds a background behind the overlay for easier reading</string>
    <string name="show_soc_overlay">Show Device Info Overlay</string>
    <string name="enable_soc_overlay">Enable Device Overlay</string>
    <string name="soc_overlay_options">Device Overlay</string>
    <string name="soc_overlay_options_description">Configure what information is shown in the device overlay</string>
    <string name="show_build_id">Show Build ID</string>
    <string name="show_driver_version">Show Driver Version</string>
    <string name="show_device_model">Show Device Model</string>
    <string name="show_gpu_model">Show GPU Model</string>
    <string name="show_soc_model">Show SoC Model</string>
    <string name="show_fw_version">Show Firmware Version</string>
    <string name="buffer_reorder_disable">Disable Buffer Reorder</string>
    <string name="buffer_reorder_disable_description">When checked, disables reordering of mapped memory uploads which allows to associate uploads with specific draws. May reduce performance in some cases.</string>
    <string name="use_sync_core">Synchronize Core Speed</string>
    <string name="use_sync_core_description">Synchronize the core tick speed to the maximum speed percentage to improve performance without altering the game\'s actual speed.</string>
    <string name="cpuopt_unsafe_host_mmu">Enable Host MMU Emulation</string>
    <string name="cpuopt_unsafe_host_mmu_description">This optimization speeds up memory accesses by the guest program. Enabling it causes guest memory reads/writes to be done directly into memory and make use of Host\'s MMU. Disabling this forces all memory accesses to use Software MMU Emulation.</string>
    <string name="debug_knobs">Debug knobs</string>
    <string name="debug_knobs_description">For development use only.</string>
    <string name="debug_knobs_hint">0 to 65535</string>
    <string name="nvdec_emulation">NVDEC Emulation</string>
    <string name="nvdec_emulation_description">Select how video decoding (NVDEC) is handled during cutscenes and intros.</string>
    <string name="nvdec_emulation_cpu" translatable="false">CPU</string>
    <string name="nvdec_emulation_gpu" translatable="false">GPU</string>
    <string name="nvdec_emulation_none">None</string>
    <string name="nvdec_emulation_hybrid">Hybrid</string>
    <string name="auto_correction_title">Auto-correction</string>
    <string name="auto_correction_description">Dynamic thermal cooling and FPS boost for overheating and frame drops</string>
    <string name="auto_correction_dialog_title">Thermal cooling and FPS boost</string>
    <string name="auto_correction_dialog_subtitle">Dynamic thermal throttling mitigation and performance optimizer</string>
    <string name="auto_correction_status_active">Auto-correction active (cooling enabled)</string>
    <string name="auto_correction_status_inactive">Thermal throttling (above 40°C) or low FPS (below 30) detected</string>
    <string name="auto_correction_issues_title">Thermal load and throttling factors</string>
    <string name="auto_correction_recommendations_title">Recommended cooling and FPS settings</string>
    <string name="auto_correction_apply">Apply auto-correction (reduce heat and boost FPS)</string>
    <string name="auto_correction_reset">Reset to defaults</string>
    <string name="auto_correction_applied_toast">Cooling and FPS boost profile successfully applied</string>
    <string name="auto_correction_reset_toast">Settings restored to default profile</string>
    <string name="auto_correction_no_profile">Universal high performance profile is active</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_description">Learn how to setup &lt;b>Eden&lt;/b> and jump into emulation.</string>
    <string name="step_complete">Complete!</string>
    <string name="gpu_unswizzle_enable">Enable GPU Unswizzle</string>
    <string name="gpu_unswizzle_texture_size">GPU Unswizzle Max Texture Size</string>
    <string name="gpu_unswizzle_stream_size">GPU Unswizzle Stream Size</string>
    <string name="gpu_unswizzle_chunk_size">GPU Unswizzle Chunk Size</string>
    <string name="gpu_unswizzle_default_button">Default</string>
    <string name="close">Close</string>
    <string name="emulation_toggle_controls">Toggle controls</string>
    <string name="emulation_rel_stick_center">Relative stick center</string>
    <string name="emulation_dpad_slide">D-pad slide</string>
    <string name="emulation_haptics">Touch haptics</string>
    <string name="emulation_control_adjust">Adjust overlay</string>
    <string name="emulation_touch_overlay_reset">Reset overlay</string>
    <string name="emulation_touch_overlay_edit">Edit overlay</string>
    <string name="emulation_snap_to_grid">Snap to grid</string>
    <string name="load_amiibo">Load Amiibo</string>
    <string name="touchscreen">Touchscreen</string>
    <string name="amiibo_title">Amiibo</string>
    <string name="amiibo">Amiibo</string>
    <string name="amiibo_database_title">Online Amiibo Database</string>
    <string name="amiibo_pick_file">Choose local .bin file...</string>
    <string name="overlay_skin_theme">Touch Controller Skin Theme</string>
    <string name="show_device_load_overlay">Show Device Load Overlay</string>
</resources>