<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_show_stats_overlay"
        android:icon="@drawable/ic_frames"
        android:title="@string/show_stats_overlay"
        android:checkable="true" />

    <item
        android:id="@+id/menu_show_soc_overlay"
        android:icon="@drawable/ic_system"
        android:title="@string/show_soc_overlay"
        android:checkable="true" />

    <item
        android:id="@+id/menu_show_load_overlay"
        android:icon="@drawable/ic_system_settings"
        android:title="@string/show_device_load_overlay"
        android:checkable="true" />

    <item
        android:id="@+id/menu_edit_overlay"
        android:icon="@drawable/ic_edit"
        android:title="@string/emulation_touch_overlay_edit" />

    <item
        android:id="@+id/menu_snap_to_grid"
        android:icon="@drawable/ic_options"
        android:title="@string/emulation_snap_to_grid"
        android:checkable="true" />

    <item
        android:id="@+id/menu_adjust_overlay"
        android:icon="@drawable/ic_tune"
        android:title="@string/emulation_control_adjust" />

    <item
        android:id="@+id/menu_overlay_theme"
        android:icon="@drawable/ic_palette"
        android:title="@string/overlay_skin_theme" />

    <item
        android:id="@+id/menu_toggle_controls"
        android:icon="@drawable/ic_controller"
        android:title="@string/emulation_toggle_controls" />

    <item
        android:id="@+id/menu_rel_stick_center"
        android:icon="@drawable/ic_controller_disconnected"
        android:title="@string/emulation_rel_stick_center"
        android:checkable="true" />

    <item
        android:id="@+id/menu_dpad_slide"
        android:icon="@drawable/ic_arrow_forward"
        android:title="@string/emulation_dpad_slide"
        android:checkable="true" />

    <item
        android:id="@+id/menu_haptics"
        android:icon="@drawable/ic_notification"
        android:title="@string/emulation_haptics"
        android:checkable="true" />

    <item
        android:id="@+id/menu_touchscreen"
        android:icon="@drawable/ic_applet"
        android:title="@string/touchscreen"
        android:checkable="true" />

    <item
        android:id="@+id/menu_reset_overlay"
        android:icon="@drawable/ic_refresh"
        android:title="@string/emulation_touch_overlay_reset" />

</menu>
